@@ -1,3 +1,11 @@
+2011-12-08  Kaz Kylheku  <kaz@kylheku.com>
+
+	C++ maintenance.
+
+	* eval.c (and_s, or_s): Redundant variables removed.
+
+	* match.h (do_s): extern storage class specifier added.
+
 2011-12-07  Kaz Kylheku  <kaz@kylheku.com>
 
 	* eval.c (op_defun): Transform a function body by inserting
